--- a/main.css
+++ b/main.css
@@ -3,6 +3,8 @@ html, body {
 	margin: 0;
 	width: 100%;
 	height: 100%;
+	background: black;
+	color: lightgreen;
 }
 #container {
 	width: 100%;
@@ -10,13 +12,15 @@ html, body {
 }
 .column {
 	width: 10px;
-	display: inline-block;
+	margin: 1px;
+	height: auto;
+	float: left;
 }
 
 .cell {
 	width: 10px;
 	height: 10px;
-	display: inline-block;
+	margin: 0;
 	font-family: monospace;
 	font-size: 10px;
 }
